@@ -4,7 +4,8 @@ Revision 0.1.4
 - built-in codec debugging facility added
 - Added some more checks to ObjectIdentifier BER encoder catching
   posible 2^8 overflow condition by two leading sub-OIDs
-- Fix in Boolean truth testting built-in methods
+- Catch inappropriate substrate type passed to decoder.
+- Fix in Boolean truth testing built-in methods
 - Fix to substrate underrun error handling at ObjectIdentifier BER decoder
 - Fix to BER Boolean decoder that allows other pre-computed
   values besides 0 and 1
